<resources>
    <string name="app_name">Estudiantes</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="btn_registrar">Registrarse</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="msg_correo">Digite su correo</string>
    <string name="msg_contraseña">Digite su contraseña</string>
    <string name="msg_fallo_registro">No se pudo registrar el usuario</string>
    <string name="msg_fallo_login">Usuario o contraseña incorrectos</string>
    <string name="msg_add_estudiante">Estudiante agregado con éxito</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_estudiante">Estudiantes</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="nombre">Nombre</string>
    <string name="Edad">Edad</string>
    <string name="cedula">Cedula</string>
    <string name="telefono">Teléfono</string>
    <string name="email">E-mail</string>

    <string name="msg_nombre_add">Nombre del estudiante</string>
    <string name="msg_cedula_add">Cedula</string>
    <string name="msg_edad_add">Edad</string>
    <string name="msg_telefono_add">Teléfono</string>
    <string name="msg_correo_add">E-mail</string>
    <string name="msg_update">Estudiante actualizado con éxito</string>

    <string name="bt_Add">Guardar</string>
    <string name="bt_Update">Actualizar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>