<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20sp"
    android:orientation="vertical"
    android:padding="20sp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/msg_correo"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contraseña"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/msg_contraseña"
        android:ems="10"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:text="@string/btn_registrar" />

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:text="@string/btn_ingresar" />
    </LinearLayout>
</LinearLayout>