<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_estudiante">

    <fragment
        android:id="@+id/nav_estudiante"
        android:name="com.example.estudiantes.ui.estudiante.EstudianteFragment"
        android:label="@string/menu_estudiante"
        tools:layout="@layout/fragment_estudiante" >
        <action
            android:id="@+id/action_nav_estudiante_to_add_estudiante"
            app:destination="@id/add_estudiante" />
        <action
            android:id="@+id/action_nav_estudiante_to_nav_update_estudiante"
            app:destination="@id/nav_update_estudiante" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.estudiantes.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.estudiantes.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/add_estudiante"
        android:name="com.example.estudiantes.ui.estudiante.AddEstudianteFragment"
        android:label="fragment_add_estudiante"
        tools:layout="@layout/fragment_add_estudiante" >
        <action
            android:id="@+id/action_add_estudiante_to_nav_estudiante"
            app:destination="@id/nav_estudiante" />
    </fragment>
    <fragment
        android:id="@+id/nav_update_estudiante"
        android:name="com.example.estudiantes.ui.estudiante.UpdateEstudianteFragment"
        android:label="fragment_update_estudiante"
        tools:layout="@layout/fragment_update_estudiante" >
        <action
            android:id="@+id/action_nav_update_estudiante_to_nav_estudiante"
            app:destination="@id/nav_estudiante" />
    </fragment>
</navigation>